<resources>
    <string name="app_name">DisplayPosts</string>
    <string name="title">Title</string>
    <string name="body">Body</string>
    <string name="author_name">Author Name</string>
    <string name="image_view">ImageView</string>
    <string name="email">email</string>
    <string name="website">website</string>
    <string name="phone">phone</string>
    <string name="user_name">User Name</string>
    <string name="settings">Settings</string>
    <string name="set_email_address">Set email address</string>
    <string name="add">Add</string>
</resources>